--- a/apps/storefront/src/components/products/quantity-selector.module.scss
+++ b/apps/storefront/src/components/products/quantity-selector.module.scss
@@ -69,13 +69,8 @@
     }
 
     .input {
-        --length: 1;
-
-        width: calc(1.75rem * var(--length)) !important;
-        max-width: 100%;
+        width: 100%;
         height: 100%;
-        max-width: max-content;
-        min-width: fit-content;
 
         &::-webkit-inner-spin-button,
         &::-webkit-outer-spin-button,
