--- a/apps/storefront/src/components/products/product-actions-container.module.scss
+++ b/apps/storefront/src/components/products/product-actions-container.module.scss
@@ -1,6 +1,7 @@
 @import 'globals';
 
 .options {
+    grid-area: options;
     display: flex;
     flex-direction: column;
     gap: var(--block-spacer);
